# samsung-tvcam-fwloader-win

./: CLAUDE.md  GLM_CodeReview.json  INSTALL.md  LICENSE  README.md  STATUS.md  spec.md  validate_module.sh
agents/: architect.md  coder.md  reviewer.md  validator.md
workspace/: plan.md
workspace/src/cli_interface/: main.c
workspace/src/firmware_parser/: firmware_parser.c  firmware_parser.h
workspace/src/packaging/: CMakeLists.txt  Makefile  install.bat
workspace/src/packaging/drivers/: samsung-tvcam.inf
workspace/src/state_machine/: fwloader.c  fwloader.h
workspace/src/tests/: test_firmware_parser.c  test_usb_mock.c
workspace/src/usb_layer/: usb_win.c  usb_win.h
